--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
+cuphenom_outputs*
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
