Updated tests to look for files in own directory

--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,9 @@ dependencies:
   - gwpy
   - python-lalframe
   - bokeh
+  - pycbc
   - pip:
       - nvidia-cudnn-cu11==8.6.0.163
       - tensorflow==2.12.*
       - tensorflow-probability==0.20.*
+      - pytest
